--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/jpg" href="assets/fetra.jpg">
 </head>
-<body>
+<body class="bg-zinc-200 ">
   <app-root></app-root>
 </body>
 </html>
